--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Morocco</title>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Merriweather:ital@0;1&family=Noto+Sans+JP:wght@100&family=Space+Mono&family=Work+Sans:wght@400;500;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/reset.css" />
-    <link rel="stylesheet" type="text/css" href="styles/style.css" />
+    <link rel="stylesheet" type="text/css" href="bdunsworth.github.io/style.css" />
   </head>
   <body>
     <!-- Header -->
