--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <h1>Website Design System</h1>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Merriweather:ital@0;1&family=Noto+Sans+JP:wght@100&family=Space+Mono&family=Work+Sans:wght@400;500;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
   </head>
-  <div class=section>
-    <h2>Colors</h2>
+  <body>
+    <h1>Website Design System</h1>
+  <div class="container">
+    <h2>
+  Colors
+    </h2>
+    <div class="color-container">
+
+    </div>
   </div>
- </html>
+  </body>
+  </html>
