--- a/index.html
+++ b/index.html
@@ -13,7 +13,28 @@
   Colors
     </h2>
     <div class="color-container">
+        <div class="color-block red">
+            <p class="color">Red</p>
+            <p class="hex-color"></p>
+        </div>
 
+        <div class="color-container">
+            <div class="color-block green">
+                <p class="color">Green</p>
+                <p class="hex-color"></p>
+            </div>
+
+    <div class="color-container">
+        <div class="color-block blue">
+            <p class="color">Blue</p>
+            <p class="hex-color"></p>
+        </div>
+
+    <div class="color-container">
+        <div class="color-block yellow">
+            <p class="color">Yellow</p>
+            <p class="hex-color"></p>
+        </div>
     </div>
   </div>
   </body>
