--- a/index.html
+++ b/index.html
@@ -14,25 +14,25 @@
     </h2>
     <div class="color-container">
         <div class="color-block red">
-            <p class="color">Red</p>
+            <p class="color-label">Red</p>
             <p class="hex-color"></p>
         </div>
 
         <div class="color-container">
             <div class="color-block green">
-                <p class="color">Green</p>
+                <p class="color-label">Green</p>
                 <p class="hex-color"></p>
             </div>
 
     <div class="color-container">
         <div class="color-block blue">
-            <p class="color">Blue</p>
+            <p class="color-label">Blue</p>
             <p class="hex-color"></p>
         </div>
 
     <div class="color-container">
         <div class="color-block yellow">
-            <p class="color">Yellow</p>
+            <p class="color-label">Yellow</p>
             <p class="hex-color"></p>
         </div>
     </div>
