--- a/index.html
+++ b/index.html
@@ -9,33 +9,31 @@
   <body>
     <h1>Website Design System</h1>
   <div class="container">
-    <h2>
-  Colors
-    </h2>
+    <h2>Colors</h2>
     <div class="color-container">
         <div class="color-block red">
             <p class="color-label">Red</p>
             <p class="hex-color"></p>
         </div>
 
-        <div class="color-container">
             <div class="color-block green">
                 <p class="color-label">Green</p>
                 <p class="hex-color"></p>
             </div>
 
-    <div class="color-container">
         <div class="color-block blue">
             <p class="color-label">Blue</p>
             <p class="hex-color"></p>
         </div>
 
-    <div class="color-container">
-        <div class="color-block yellow">
+       <div class="color-block yellow">
             <p class="color-label">Yellow</p>
             <p class="hex-color"></p>
         </div>
     </div>
+  </div>
+  <div class="container">
+    <h2>Fonts</h2>
   </div>
   </body>
   </html>
